[package]
name = "cpu-count"
version = "0.1.0"
description = "testing"
authors = ["@mwyatt896"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
